Поправил работу пропертис

--- a/laba_5_2/springEducation/src/main/resources/MathForProgramming.properties
+++ b/laba_5_2/springEducation/src/main/resources/MathForProgramming.properties
@@ -1,3 +1,3 @@
-new_book.num_of_pages=2000
-new_book.price=800.2
-new_book.title=Math for programming
+textBook.num_of_pages=2000
+textBook.price=800.2
+textBook.title=Math for programming
